Olog logo fix - align horizontally

--- a/orange/static/css/style.css
+++ b/orange/static/css/style.css
@@ -62,11 +62,11 @@ header .navbar-text .btn {
 header .navbar-text .btn::after {
   content: "";
   position: absolute;
-  width: 100%;
-  height: 2rem;
-  right: 0;
-  bottom: -150%;
-  background-image: url("img/logo.svg");
+  width: 200%;
+  height: 4.2rem;
+  left: -225%;
+  top: -1rem;
+  background-image: url("img/logo_dark.svg");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
